Home page with bootstrap / sass / styles updated.

--- a/readme
+++ b/readme
@@ -1,54 +1,74 @@
+flask --app app --debug run
+sass --watch style.scss style.css
+
 11/09/2022: 
-        -   Set flask and python enviroment, Templates
-        
-        -   Static Files (Url for images, css, favicon)
-                https://flask.palletsprojects.com/en/1.1.x/tutorial/static/
-        -   Navigation Module
+        -       Set flask and python enviroment, Templates
 
-                Check base.html & app.py files
+        -       Static Files (Url for images, css, favicon)
+                        https://flask.palletsprojects.com/en/1.1.x/tutorial/static/
+        -       Navigation Module
 
-                https://www.geeksforgeeks.org/navigation-bars-in-flask/
-        -   Read a Json file
+                        Check base.html & app.py files
 
-                Check app.py file
+                        https://www.geeksforgeeks.org/navigation-bars-in-flask/
+        -       Read a Json file
 
-                https://www.geeksforgeeks.org/read-json-file-using-python/
+                        Check app.py file
 
-        -   Nesting extends templates
+                        https://www.geeksforgeeks.org/read-json-file-using-python/
+
+        -       Nesting extends templates
             
-                Not applied
+                        Not applied
 
-                https://jinja.palletsprojects.com/en/3.1.x/templates/
+                        https://jinja.palletsprojects.com/en/3.1.x/templates/
 
 14/09/2022: 
-        -   String Concatenation
+        -       String Concatenation
 
-                Check Home template / services section
+                        Check Home template / services section
 
-                https://stackoverflow.com/questions/39842718/im-trying-to-create-an-url-for-in-an-html-img-src-tag-where-the-filename
+                        https://stackoverflow.com/questions/39842718/im-trying-to-create-an-url-for-in-an-html-img-src-tag-where-the-filename
 
-        -   For loops with range
+        -       For loops with range
 
-                Check Home template / projects section
+                        Check Home template / projects section
 
-        -   Convert int to string inside template
+        -       Convert int to string inside template
 
-                Check Home template / projects section
+                        Check Home template / projects section
 
-                https://stackoverflow.com/questions/19161093/convert-integer-to-string-jinja
+                        https://stackoverflow.com/questions/19161093/convert-integer-to-string-jinja
 
-        -   Update a variable with jinja
+        -       Update a variable with jinja
 
-                Check Home template / home caraousel & about carousel
+                        Check Home template / home caraousel & about carousel
 
-                https://stackoverflow.com/questions/9486393/jinja2-change-the-value-of-a-variable-inside-a-loop
+                        https://stackoverflow.com/questions/9486393/jinja2-change-the-value-of-a-variable-inside-a-loop
 
-         -  Forms, HTTP Medthods
+         -      Forms, HTTP Medthods
 
-                Check Home template / Contact Section
+                        Check Home template / Contact Section
 
-                https://www.digitalocean.com/community/tutorials/how-to-use-web-forms-in-a-flask-application
-                https://flask.palletsprojects.com/en/2.2.x/quickstart/#http-methods
+                        https://www.digitalocean.com/community/tutorials/how-to-use-web-forms-in-a-flask-application
+                        https://flask.palletsprojects.com/en/2.2.x/quickstart/#http-methods
+
+15/09/2022:
+        -       Get strings from files in static folder
+
+                        Check Projects template
+
+                        https://stackoverflow.com/questions/47378820/flask-loop-through-images-in-static-directory
+
+18/09/2022
+        -       Sass Install / Global Variables
+
+                        https://sass-lang.com/guide
+
+                        https://stackoverflow.com/questions/17598996/sass-use-variables-across-multiple-files
+                        
+        -       Modals / Lists
+
 
 
 
