--- a/readme
+++ b/readme
@@ -1,89 +1,59 @@
+# Esencial Construcciones
+
+A landing website with a mongodb atlas database.
+
+# Run Server
+
+```
+# run server
 flask --app run run
+
+# run server in debug mode
 flask --app run --debug run
+```
+
+## Compile Sass
+```
 sass --watch style.scss style.css
+```
 
-11/09/2022: 
-        -       Set flask and python enviroment, Templates
+# What I learned in this project:
 
-        -       Static Files (Url for images, css, favicon)
-                        https://flask.palletsprojects.com/en/1.1.x/tutorial/static/
-        -       Navigation Module
+- Set flask and python enviroment, Templates
 
-                        Check base.html & app.py files
+- [Static Files](https://flask.palletsprojects.com/en/1.1.x/tutorial/static/)  (Url for images, css, favicon)
+- [Navigation Module](https://www.geeksforgeeks.org/navigation-bars-in-flask/). Check base.html & app.py files
+- [Read a Json file](https://www.geeksforgeeks.org/read-json-file-using-python/). Check app.py file
+- [Nesting extends templates](https://jinja.palletsprojects.com/en/3.1.x/templates/). Not applied
+- [String Concatenation](https://stackoverflow.com/questions/39842718/im-trying-to-create-an-url-for-in-an-html-img-src-tag-where-the-filename). Check Home template / services section
+- For loops with range. Check Home template / projects section
+- [Convert int to string inside template](https://stackoverflow.com/questions/19161093/convert-integer-to-string-jinja). Check Home template / projects section
+- [Update a variable with jinja](https://stackoverflow.com/questions/9486393/jinja2-change-the-value-of-a-variable-inside-a-loop). Check Home template / home caraousel & about carousel
+- [Forms, HTTP Medthods](https://www.digitalocean.com/community/tutorials/how-to-use-web-forms-in-a-flask-application). Check Home template / [Contact Section](https://flask.palletsprojects.com/en/2.2.x/quickstart/#http-methods)
+- [Get strings from files in static folder](https://stackoverflow.com/questions/47378820/flask-loop-through-images-in-static-directory). Check Projects template
+- [Sass Install](https://sass-lang.com/guide) / [Global Variables](https://stackoverflow.com/questions/17598996/sass-use-variables-across-multiple-files)
+-  Modals / Lists
 
-                        https://www.geeksforgeeks.org/navigation-bars-in-flask/
-        -       Read a Json file
+## Virtual environment          
+Create a virtual environment: 
+```
+python3 -m venv <name of virtual environment>
+```
 
-                        Check app.py file
+Activate virtual environment:
+```
+. venv/bin/activate
+```
 
-                        https://www.geeksforgeeks.org/read-json-file-using-python/
+Deactivate virtual environmt:
+```
+deactivate
+```
 
-        -       Nesting extends templates
-            
-                        Not applied
-
-                        https://jinja.palletsprojects.com/en/3.1.x/templates/
-
-14/09/2022: 
-        -       String Concatenation
-
-                        Check Home template / services section
-
-                        https://stackoverflow.com/questions/39842718/im-trying-to-create-an-url-for-in-an-html-img-src-tag-where-the-filename
-
-        -       For loops with range
-
-                        Check Home template / projects section
-
-        -       Convert int to string inside template
-
-                        Check Home template / projects section
-
-                        https://stackoverflow.com/questions/19161093/convert-integer-to-string-jinja
-
-        -       Update a variable with jinja
-
-                        Check Home template / home caraousel & about carousel
-
-                        https://stackoverflow.com/questions/9486393/jinja2-change-the-value-of-a-variable-inside-a-loop
-
-         -      Forms, HTTP Medthods
-
-                        Check Home template / Contact Section
-
-                        https://www.digitalocean.com/community/tutorials/how-to-use-web-forms-in-a-flask-application
-                        https://flask.palletsprojects.com/en/2.2.x/quickstart/#http-methods
-
-15/09/2022:
-        -       Get strings from files in static folder
-
-                        Check Projects template
-
-                        https://stackoverflow.com/questions/47378820/flask-loop-through-images-in-static-directory
-
-18/09/2022
-        -       Sass Install / Global Variables
-
-                        https://sass-lang.com/guide
-
-                        https://stackoverflow.com/questions/17598996/sass-use-variables-across-multiple-files
-                        
-        -       Modals / Lists
-
-29/12/2022
-        -       Virtual environment
-                        
-                        Create a virtual environment: 
-                        python3 -m venv <name of virtual environment>
-
-                        Activate virtual environment:
-                        . venv/bin/activate
-
-                        Deactivate virtual environmt:
-                        deactivate
-
-                        Create a requirements text file:
-                        pip freeze > requirements.txt
+Create a requirements text file:
+```
+pip freeze > requirements.txt
+```
 
                         
 
